# QuadraticEquationSolver

./: CMakeLists.txt  README.md  changelog.md
include/: performoperation.h  test_suite.h
src/: main.c  performoperation.c  test_suite.c
